--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "npx drizzle-kit generate",
+    "db:migrate": "npx drizzle-kit migrate"
   },
   "dependencies": {
+    "@types/pg": "^8.11.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "drizzle-kit": "^0.30.5",
+    "drizzle-orm": "^0.40.0",
     "lucide-react": "^0.477.0",
     "next": "^14.2.24",
+    "pg": "^8.13.3",
+    "postgres": "^3.4.5",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.0.2",
