--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@types/pg": "^8.11.11",
+    "axios": "^1.8.1",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -19,6 +21,7 @@
     "drizzle-orm": "^0.40.0",
     "lucide-react": "^0.477.0",
     "next": "^14.2.24",
+    "openai": "^4.86.1",
     "pg": "^8.13.3",
     "postgres": "^3.4.5",
     "react": "^18",
