--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node --expose-gc server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node --expose-gc server.js",
     "lint": "next lint",
     "db:generate": "npx drizzle-kit generate",
-    "db:migrate": "npx drizzle-kit migrate"
+    "db:migrate": "npx drizzle-kit migrate",
+    "db:run-migrations": "npx tsx db/migrations/run-migrations.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@types/pg": "^8.11.11",
+    "antd": "^5.24.2",
     "axios": "^1.8.1",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +27,7 @@
     "drizzle-orm": "^0.40.0",
     "lucide-react": "^0.477.0",
     "next": "^14.2.24",
+    "next-themes": "^0.4.4",
     "openai": "^4.86.1",
     "pg": "^8.13.3",
     "postgres": "^3.4.5",
@@ -40,6 +45,8 @@
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   }
 }
