--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@types/pg": "^8.11.11",
     "antd": "^5.24.2",
     "axios": "^1.8.1",
@@ -33,6 +34,7 @@
     "postgres": "^3.4.5",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
