--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node --expose-gc server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node --expose-gc server.js",
+    "start": "next start",
     "lint": "next lint",
     "db:generate": "npx drizzle-kit generate",
     "db:migrate": "npx drizzle-kit migrate",
