--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "db:generate": "npx drizzle-kit generate",
     "db:migrate": "npx drizzle-kit migrate",
-    "db:run-migrations": "npx tsx db/migrations/run-migrations.ts"
+    "db:run-migrations": "npx tsx db/migrations/migrate.ts"
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
